# vue-skia

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vue.config.js
.github/: FUNDING.yml
.github/workflows/: check.yml  ci.yml  playground_use_latest.yml  playground_without_softlink.yml
core/: Cargo.toml  README.md  package.json
core/src/: canvas.rs  ctx.rs  image.rs  lib.rs
demo/: App.vue
demo/components/: HelloWorld.vue
fw/: App.vue  circle.js  fw.js  hello.js  index.ts  package.json  webpack.config.js
fw/hello/: README.md  package.json
plugin/: index.ts
renderer/android/: README.md
renderer/node/: README.md  index.ts  package.json  render.js  vsk.js  vue.config.js
soft-skia/: Cargo.toml
soft-skia-wasm/: Cargo.toml
soft-skia-wasm/src/: lib.rs
soft-skia/src/: instance.rs  lib.rs  provider.rs  shape.rs  tree.rs  util.rs
src/: canvas.rs  ctx.rs  lib.rs
surface/: index.ts
test/: demo.spec.ts  demo.test.js
tree/: Cargo.toml  LICENSE_MIT
tree/src/: color.rs  lib.rs  tree.rs
vue-playground/: README.md  package-ci.json  package.json  pnpm-lock.yaml  tsconfig.json  vue.config.js
vue-playground/public/: OFL.txt  index.html
vue-playground/src/: App.vue  CustomLayout.vue  code.ts  loading-code.ts  main.ts  shims-vue.d.ts
vue-skia-framework/: .gitignore  LICENSE  README.md  common.ts  launch.ts  main.js  package-publish.json  package.json  pnpm-lock.yaml  tsconfig.json  type.ts
vue-skia-framework/components/: VCircle.vue  (+9 more)
wasm/: Cargo.toml  demo.html  playground.html
(+9 files in other folders)
