[package]
name = "soft_skia"
version = "0.9.0"
edition = "2021"
description="software rasterization skia binding"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.5"
tiny-skia = "0.10.0"
base64 = "0.21.0"
fontdue = "0.7.3"
image = "0.25.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]